fixed type writer text overflow

--- a/style.css
+++ b/style.css
@@ -176,8 +176,7 @@
       font-size: 0.85rem;
       color: #bbb;
       font-family: monospace;
-      white-space: nowrap;
-      overflow: hidden;
+      white-space: rap;
       border-right: 2px solid #00f7ff;
       width: 0;
       animation: typingLong 5s steps(80, end) forwards, blink 0.7s step-end infinite;
